# Image-Generator-for-Mind-Maps

./: CMakeLists.txt  README  draw_map.cpp  draw_map.h  load_map.cpp  load_map.h  main.cpp  map_drawer.cpp  map_drawer.h  map_loader.cpp  map_loader.h  map_settings.cpp  map_settings.h  mind_map.cpp  mind_map.h
example_images/: test_map_linear_curved.tiff
test/: Test_map.mm  map_settings.txt
